# opengl_experiments

./: .gitignore  README.md
experiments/: CMakeLists.txt  imgui.ini
experiments/res/models/: suzanne.ply
experiments/res/shaders/: Color.shader  Colored3D.shader  FloatingHeadShader.shader  Jelly.shader  Shader3D.shader  Suzanne.shader  Texture.shader
experiments/src/: IndexBuffer.cpp  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  application.cpp  imgui.ini
experiments/src/tests/: Test.cpp  Test.h  Test3D.cpp  Test3D.h  TestClearColor.cpp  TestClearColor.h  TestCubeLight.cpp  TestCubeLight.h  TestFloatingHead.cpp  TestFloatingHead.h  TestJelly.cpp  TestJelly.h  TestSuzanne.cpp  TestSuzanne.h  TestTexture.cpp  TestTexture.h
